@@ -193,4 +193,41 @@ configured.
 
 </para>
 </sect4>
+
+<sect4 id="apt-setup-mirror-selection">
+<title>Choosing a network mirror</title>
+<para>
+
+If you have selected to use a network mirror during the installation
+(optional for CD/DVD installs, required for netboot images), you will be
+presented with a list of geographically nearby (and therefore hopefully
+fast) network mirrors, based upon your country selection earlier in the
+installation process.  Choosing the offered default is usually fine.
+
+</para><para>
+
+If your computer is on an IPv6-only network (which is probably not the case
+for the vast majority of users), using the default mirror for your country
+might not work.  All the mirrors in the list are reachable via IPv4, but
+only some of them can be used via IPv6.  As connectivity of individual
+mirrors can change over time, this information is not available in the
+installer.  If there is no IPv6 connectivity for the default mirror for your
+country, you can either try some of the other mirrors offered to you or
+choose the "enter information manually" option.  You can then specify
+<quote>ftp.ipv6.debian.org</quote> as the mirror name, which is an alias for
+a mirror available via IPv6, although it will probably not be the fastest
+possible one.
+
+</para><para>
+
+Another option when choosing to specify the mirror manually is to use
+<quote>http.debian.net</quote> as your mirror.
+<quote>http.debian.net</quote> is not a physical mirror but a mirror
+redirection service, i.e. it automatically refers your system to a
+real mirror near you in terms of network topology. It takes into account
+by which protocol you connect to it, i.e. if you use IPv6, it will
+refer you to an IPv6-capable mirror near you.
+
+</para>
+</sect4>    
    </sect3>
