@@ -30,6 +30,11 @@ installation-guide (20120827) UNRELEASED; urgency=low
   * Added a note that for some devices firmware may not be necessary,
     even though a firmware prompt is displayed.
     Closes: #687454 
+  * Reworked the "Configuring the Network" section, added information
+    regarding IPv6 support.
+  * Added a "Choosing a network mirror" section, added information
+    regarding IPv6 connectivity of debian mirrors and information about 
+    ftp.ipv6.debian.org and http.debian.net.
 
  -- Samuel Thibault <sthibault@debian.org>  Sun, 26 Aug 2012 16:47:22 +0200
 
